--- a/src/components/navbar.html
+++ b/src/components/navbar.html
@@ -33,7 +33,7 @@
       <a href="#documentation">Documentation</a>
       <a href="#illustration">Illustration</a>
     </div>
-  </nav>-->
+  </nav>
 
   <div class="nav-container">
     <div class="nav-categories">
@@ -55,6 +55,7 @@
 </body>
 </html>
 
+-->
 <!-- navbar.html -->
 <!DOCTYPE html>
 <html lang="en">
@@ -67,10 +68,10 @@
 
   <nav class="navbar">
     <div class="logo">
-      <img src="logo.png" alt="Logo">
+      <img src="../img/headphones.svg" alt="Logo">
     </div>
     <div class="brand">
-      <h1>Your Name</h1>
+      <h1>Allison Lu</h1>
     </div>
     <div class="nav-container">
       <div class="nav-categories">
