--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -1,4 +1,4 @@
-/*body {
+body {
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
     padding: 0;
@@ -14,18 +14,6 @@
     justify-content: space-between;
   }
   
-  nav {
-    display: flex;
-    justify-content: space-around;
-    background-color: #555;
-    padding: 0.5em;
-  }
-  
-  nav a {
-    color: white;
-    text-decoration: none;
-  }
-  
   section {
     padding: 1em;
   }
@@ -38,13 +26,6 @@
     position: fixed;
     bottom: 0;
     width: 100%;
-  }
-  */
-
-  /* styles.css */
-body {
-    margin: 0;
-    padding: 0;
   }
   
   .navbar {
@@ -64,6 +45,8 @@ body {
     color: #d68a57;
     margin: 0;
   }
+
+  /*Navigation bar*/
   
   .nav-container {
     display: flex;
@@ -77,9 +60,8 @@ body {
     position: relative; /* Add relative positioning to the navbar container */
     height: auto
   }
-  
 
-.nav-categories {
+  .nav-categories {
     display: flex;
     align-items: center; /* Align navigation elements vertically in the middle */
   }
@@ -97,52 +79,6 @@ body {
     background-color: #ddd;
     color: black;
   }
-  /*
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #333;
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-    z-index: 1;
-  }
-  
-  .dropdown-content a {
-    color: white;
-    padding: 12px 16px;
-    display: block;
-    text-decoration: none;
-  }
-  
-  .dropdown-content a:hover {
-    background-color: #ddd;
-    color: black;
-  }
-  
-  .dropdown:hover .dropdown-content {
-    display: block;
-    position: absolute;
-    top: 40px; //Adjust the distance from the dropdown button
-    left: 0;
-    width: 100%;
-  }
-  
-// Additional styles for horizontal tabs
-  .navbar a {
-    margin-right: 15px;
-  }
-  
-//Additional styles for vertical subcategories
-  .dropdown-content {
-    flex-direction: column;
-  }
-  
-  .dropdown-content a {
-    display: block;
-    width: 100%;
-  }
-  */
-
-
 
   .dropdown-content {
     display: none;
@@ -175,3 +111,4 @@ body {
     left: 0;
     width: max-content; /* Set the width to the content's intrinsic width */
   }
+  
