tweaks to header

--- a/src/components/navbar.html
+++ b/src/components/navbar.html
@@ -17,16 +17,21 @@
     </div>
     <div class="nav-container">
       <div class="nav-categories">
-        <a href="#journey">Journey</a>
+        <a id="journey-tab" href="journey.html">Journey</a>
+        <!--<a href="#journey">Journey</a>-->
         <div class="dropdown">
           <span class="dropbtn">Adventure</span>
           <div class="dropdown-content">
-            <a href="#movement">Movement</a>
+            <!--<a href="#movement">Movement</a>
             <a href="#documentation">Documentation</a>
-            <a href="#illustration">Illustration</a>
+            <a href="#illustration">Illustration</a>-->
+            <a href="movement.html">Movement</a>
+            <a href="documentation.html">Documentation</a>
+            <a href="illustration.html">Illustration</a>
           </div>
         </div>
-        <a href="#about">About</a>
+        <!--<a href="#about">About</a>-->
+        <a id="about-tab" href="about.html">About</a>
       </div>
     </div>
   </nav>
