--- a/src/components/style.css
+++ b/src/components/style.css
@@ -51,6 +51,8 @@ header {
     margin-right: 20px;
 }
 
+/*navigation*/
+
 nav ul {
     list-style: none;
     display: flex;
@@ -70,6 +72,7 @@ nav ul li a.active {
     color: #B3724D; /* Adjust the color for the active link */
 }
 
+/*dropdown*/
 .dropdown {
     position: relative;
 }
@@ -92,6 +95,9 @@ nav ul li a.active {
     display: block;
 }
 
+
+
+/*for sections*/
 .section {
     height: 50vh; /* Half height of the viewport */
     display: flex;
@@ -118,4 +124,64 @@ nav ul li a.active {
     background-image: url('section3-background.jpg'); /* Add your background image */
     background-size: cover;
     background-position: center;
+}
+
+/*slider*/
+.slider-container {
+    position: relative;
+    max-width: 800px;
+    margin: auto;
+}
+
+.slider {
+    display: flex;
+    width: 100%;
+    overflow: hidden;
+}
+
+.slide {
+    width: 100%;
+    flex: 0 0 auto;
+}
+
+.slide img {
+    width: 100%;
+    height: auto;
+}
+
+.slider-nav {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    text-align: center;
+    padding: 10px;
+    background-color: rgba(0, 0, 0, 0.5); /* Transparent background */
+}
+
+.slider-nav button {
+    background-color: transparent;
+    color: #fff;
+    border: none;
+    font-size: 20px;
+    cursor: pointer;
+    margin: 0 10px;
+}
+
+.slider-dots {
+    display: inline-block;
+}
+
+.dot {
+    height: 15px;
+    width: 15px;
+    margin: 0 5px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+}
+
+.dot.active {
+    background-color: #717171;
 }
