try to work on consistent footer

--- a/src/components/index.html
+++ b/src/components/index.html
@@ -35,6 +35,11 @@
         </div>
     </header>
 
+    <footer>
+        <p>&copy; 2023 Allison. All rights reserved.</p>
+        <p>Contact: allisonlu100@gmail.com</p>
+        <p>Follow me on <a href="https://instagram.com/wholu.moo" target="_blank">instagram</a></p>
+    </footer>
     <!-- Your page content goes here -->
 
 </body>
