update illutration and sections in journey to ensure images are good size

--- a/src/components/index.html
+++ b/src/components/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="logo-container">
-            <img src="../img/headphones.svg" alt="Your Logo">
+            <img class="logo" src="../img/headphones.svg" alt="Your Logo">
             <h1>Allison Lu </h1>
         </div>
         <nav>
