--- a/src/components/style.css
+++ b/src/components/style.css
@@ -35,6 +35,21 @@ header {
     padding: 10px;
 }
 
+.header-illustration{
+    background-color: #D4C9BE; /* Unique background color for Documentation header */
+    padding: 10px;
+}
+
+.header-journey{
+    background-color: #D4C9BE; /* Unique background color for Documentation header */
+    padding: 10px;
+}
+
+.header-movement{
+    background-color: #D4C9BE; /* Unique background color for Documentation header */
+    padding: 10px;
+}
+
 .custom-header {
     font-family: 'Ariel', sans-serif;
     color: #333;
@@ -57,6 +72,10 @@ header {
     margin-right: 20px;
 }
 
+.logo {
+    width: 100px; /* Adjust the size of your logo */
+    margin-right: 20px;
+}
 /*footer*/
 footer {
     display: none; /* Initially hide the footer */
@@ -115,6 +134,7 @@ nav ul li a.active {
 /*for sections*/
 .section {
     height: 50vh; /* Half height of the viewport */
+    position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -123,8 +143,24 @@ nav ul li a.active {
     padding: 15px 20px;
 }
 
+.content {
+    flex: 1;
+    padding: 20px;
+    text-align: center;
+}
+
+.image-container {
+    flex: 1;
+    overflow: hidden;
+}
+
+.icons {
+    height: 50vh;
+    object-fit: cover;
+}
+
 #movement {
-    background-color: B3724D;
+    background-color: #B3724D;
     background-image: url('section1-background.jpg'); /* Add your background image */
     background-size: cover;
     background-position: center;
@@ -142,7 +178,18 @@ nav ul li a.active {
     background-position: center;
 }
 
+#about-me {
+    background-color: #B3724D;
+}
 
+#coding-projects {
+    background-color: #745f53;
+}
+
+#UX-UI {
+    background-color: #953e0c;
+    
+}
 /*slider & thumbnail for images*/
 .slider-container {
     position: relative;
