update about page

--- a/src/components/index.html
+++ b/src/components/index.html
@@ -12,8 +12,8 @@
 <body>
     <header>
         <div class="logo-container">
-            <img class="logo" src="../img/headphones.svg" alt="Your Logo">
-            <h1>Allison Lu </h1>
+            <img class="logo" src="../img/headphones.svg" alt="Headphones Logo">
+            <h1>Allison Lu</h1>
         </div>
         <nav>
             <ul>
