update footer and some colors

--- a/src/components/index.html
+++ b/src/components/index.html
@@ -34,12 +34,16 @@
             <p id="page-description"></p>
         </div>
     </header>
-
+<!--
     <footer>
-        <p>&copy; 2023 Allison. All rights reserved.</p>
-        <p>Contact: allisonlu100@gmail.com</p>
-        <p>Follow me on <a href="https://instagram.com/wholu.moo" target="_blank">instagram</a></p>
-    </footer>
+        <div class="contact-info">
+            <p>Contact info: <a href="mailto:alu8@bu.edu">alu8@bu.edu</a></p>
+        </div>
+        <div class="social-icons">
+            <a href="https://www.instagram.com/wholu.moo" target="_blank"><img src="../img/instagram-logo.png" alt="Instagram Logo"></a>
+            <a href="https://github.com/allison-lu8" target="_blank"><img src="../img/github-logo.png" alt="GitHub Logo"></a>
+        </div>
+    </footer>-->
     <!-- Your page content goes here -->
 
 </body>
