--- a/src/components/index.html
+++ b/src/components/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="logo-container">
-            <img class="logo" src="../img/headphones.svg" alt="Headphones Logo">
+            <img class="logo" src="../img/SVG/logo.svg" alt="Initials Logo">
             <h1>Allison Lu</h1>
         </div>
         <nav>
