--- a/src/components/index.html
+++ b/src/components/index.html
@@ -17,7 +17,13 @@
         </div>
         <nav>
             <ul>
-                <li><a href="../pages/journey.html">Journey</a></li>
+                <li class="dropdown">
+                    <a href="../pages/journey.html">Journey</a>
+                    <div class="dropdown-content">
+                        <a href="../pages/coding-projects.html">Coding Projects</a>
+                        <a href="../pages/ux-projects.html">UX Projects</a>
+                    </div>
+                </li>
                 <li class="dropdown">
                     <a href="../pages/adventure.html">Adventure</a>
                     <div class="dropdown-content">
