--- a/src/components/style.css
+++ b/src/components/style.css
@@ -19,10 +19,51 @@ header {
     margin-right: 20px; /* Adjust the margin as needed */
 }
 
+.video-header {
+    position: relative;
+    height: 100vh;
+    overflow: hidden;
+}
+
+#headerVideo {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    z-index: -1;
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5); /* Adjust the alpha value for the desired level of opacity */
+}
+
 .header-content {
-    text-align: left; /* Left align content */
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: left;
+    color: white;
+    z-index: 1;
     height: 75vh;
     padding: 15px 20px;
+}
+
+.header-content h1 {
+    margin: 0;
+}
+
+.header-content p {
+    margin: 10px 0 0;
 }
 
 .header-about {
