--- a/src/components/style.css
+++ b/src/components/style.css
@@ -19,51 +19,10 @@ header {
     margin-right: 20px; /* Adjust the margin as needed */
 }
 
-.video-header {
-    position: relative;
-    height: 100vh;
-    overflow: hidden;
-}
-
-#headerVideo {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    min-width: 100%;
-    min-height: 100%;
-    width: auto;
-    height: auto;
-    z-index: -1;
-}
-
-.overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.5); /* Adjust the alpha value for the desired level of opacity */
-}
-
 .header-content {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: left;
-    color: white;
-    z-index: 1;
+    text-align: left; /* Left align content */
     height: 75vh;
     padding: 15px 20px;
-}
-
-.header-content h1 {
-    margin: 0;
-}
-
-.header-content p {
-    margin: 10px 0 0;
 }
 
 .header-about {
@@ -85,10 +44,18 @@ header {
     background-color: #D4C9BE; /* Unique background color for Documentation header */
     padding: 10px;
 }
-
 .header-journey{
     background-color: #D5DDEC; /* Unique background color for Documentation header */
     padding: 10px;
+}
+
+#coding-projects {
+    background-color: #8E9C95;
+}
+
+#UX-UI {
+    background-color: #89A0AF;
+    
 }
 
 .header-movement{
@@ -249,14 +216,6 @@ nav ul li a.active {
     
 }
 
-#coding-projects {
-    background-color: #8E9C95;
-}
-
-#UX-UI {
-    background-color: #89A0AF;
-    
-}
 /*slider & thumbnail for images*/
 .slider-container {
     position: relative;
@@ -344,33 +303,6 @@ nav ul li a.active {
 .thumbnail:hover,
 .thumbnail.active {
     border: 2px solid #fff; /* Border color when hovered or selected */
-}
-
-/*for videos*/
-/* Container for video groups */
-.video-container {
-    display: flex;
-    justify-content: space-between;
-}
-
-/* Style for each video group */
-.video-group {
-    flex: 0 0 calc(50% - 10px); /* Two groups in a row with a small gap in between */
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-bottom: 20px; /* Adjust as needed */
-    margin-top: 30px;
-}
-
-/* Style for each video */
-.video {
-    margin-bottom: 10px; /* Adjust as needed */
-}
-
-/* Style for text under videos */
-.text {
-    text-align: center;
 }
 
 /* for resume*/
