--- a/src/components/style.css
+++ b/src/components/style.css
@@ -94,8 +94,10 @@ header {
 footer {
     background-color: #C3B091;
     color: #fff;
-    padding: px;
+    padding: 1em 0;/*px*/
     text-align: center;
+    bottom: 0;
+    width: 100%;
 }
 
 .contact-info {
@@ -176,6 +178,15 @@ nav ul li a.active {
     padding: 15px 20px;
 }
 
+.case-study-section{
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 2em;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 .content {
     flex: 1;
     padding: 20px;
@@ -191,7 +202,12 @@ nav ul li a.active {
     height: 50vh;
     object-fit: cover;
 }
-
+.section-divider {
+    border: none;
+    border-top: 1px solid #ccc; /* Define line properties */
+    margin: 20px 0; /* Adjust margin as needed */
+    max-width: 800px; /* Line extends the width of the container */
+}
 #movement {
     background-color: #B3724D;
     background-image: url('section1-background.jpg'); /* Add your background image */
