--- a/src/components/index.html
+++ b/src/components/index.html
@@ -11,10 +11,10 @@
 
 <body>
     <header>
-        <div class="logo-container">
+        <a href="../pages/home.html" class="logo-container">
             <img class="logo" src="../img/SVG/logo.svg" alt="Initials Logo">
             <h2>Allison Lu</h2>
-        </div>
+        </a>
         <nav>
             <ul>
                 <li class="dropdown">
