hide some pages

--- a/src/components/index.html
+++ b/src/components/index.html
@@ -19,10 +19,11 @@
             <ul>
                 <li class="dropdown">
                     <a href="../pages/journey.html">Journey</a>
+                <!--
                     <div class="dropdown-content">
                         <a href="../pages/coding-projects.html">Coding Projects</a>
                         <a href="../pages/ux-projects.html">UX Projects</a>
-                    </div>
+                    </div>-->
                 </li>
                 <li class="dropdown">
                     <a href="../pages/adventure.html">Adventure</a>
